use base64 encoder processes binary resources